[package]
name = "pixie_wrangler"
version = "0.6.0"
authors = []
edition = "2021"
repository = "https://github.com/rparrett/pixie_wrangler"
license = "MIT OR Apache-2.0"

[features]
debugdump = ["bevy_mod_debugdump"]

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "bevy_window",
    "multi_threaded",
    "webgl2",
    "x11",
] }

bevy_prototype_lyon = "0.13"
bevy_easings = "0.15"
bevy_common_assets = { version = "0.12", features = ["ron"] }
# TODO no release yet
bevy_mod_debugdump = { git = "https://github.com/jakobhellermann/bevy_mod_debugdump", optional = true }
bevy_simple_prefs = "0.4"

rand = "0.8"
petgraph = "0.6"
itertools = "0.13"
serde = { version = "1", features = ["derive"] }
rstar = "0.12"

# Disable low-severity logs at compile time for performance.
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

# Dependencies for WASM only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console", "Window", "Storage"] }

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
redundant_else = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"
map_flatten = "warn"

[profile.dist]
inherits = "release"
lto = "thin"

[profile.web-dist]
inherits = "dist"
opt-level = "s"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
approx = "0.5.1"
