[package]
name = "pixie_wrangler"
version = "0.8.1"
authors = []
edition = "2021"
repository = "https://github.com/rparrett/pixie_wrangler"
license = "MIT OR Apache-2.0"

[features]
debugdump = ["bevy_mod_debugdump"]

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "bevy_asset",
    "bevy_audio",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "bevy_window",
    "default_font",
    "multi_threaded",
    "vorbis",
    "webgl2",
    "x11",
] }

bevy_prototype_lyon = { git = "https://github.com/rparrett/bevy_prototype_lyon", branch = "fix-dynamic-examples" }
bevy_easings = "0.16"
bevy_common_assets = { version = "0.13", features = ["ron"] }
bevy_mod_debugdump = { version = "0.13", optional = true }
bevy_simple_prefs = "0.6"

rand = "0.8"
petgraph = "0.6"
itertools = "0.13"
serde = { version = "1", features = ["derive"] }
rstar = "0.12"

# Disable low-severity logs at compile time for performance.
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
bevy_pipelines_ready = "0.6.0"

[dev-dependencies]
approx = "0.5.1"

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
redundant_else = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"
map_flatten = "warn"

[profile.dist]
inherits = "release"
lto = "thin"

[profile.web-dist]
inherits = "dist"
opt-level = "s"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
